<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/arad_romania_pagina_principala" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_centerInParent="true"
                android:paddingTop="60dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/idObTuristice"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            android:background="@color/white"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgObiectieTuristice"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/obiective_turistice_arad"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/txtObiectieTuristice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:paddingLeft="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/obiective_turistice"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            android:id="@+id/cardViewRestaurante"
            android:background="@color/white"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgRestaurant"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/restaurante_arad" />

                <TextView
                    android:id="@+id/txtRestaurante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:paddingTop="4dp"
                    android:paddingLeft="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/restaurante"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            android:id="@+id/cardViewHoteluri"
            android:background="@color/white"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgHoteluri"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/hoteuri_arad"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/txtHoteuri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:paddingTop="4dp"
                    android:paddingLeft="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/hoteluri"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            android:id="@+id/cardViewSanatate"
            android:background="@color/white"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgSanatate"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/sanatate_arad"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/txtSanatate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:paddingTop="4dp"
                    android:paddingLeft="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/sanatate"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            android:id="@+id/cardViewEvenimete"
            android:background="@color/white"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgEvenimente"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/pagina_principala_evenimente"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/txtEvenimente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:paddingTop="4dp"
                    android:paddingLeft="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/evenimente"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            android:id="@+id/cardViewMagazine"
            android:background="@color/white"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imgMagazine"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/centre_comerciale_principala"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/txtMagazine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:paddingTop="4dp"
                    android:paddingLeft="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/centre_comerciale"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>
